# vtviewer

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
resources/: icons.qrc  qss.qrc  shaders.qrc
resources/qss/: default.css  psblack.css
resources/shaders/: indicator.frag  marks.frag  rect.frag  renderYUV420P.vert
scripts/: download.py  otb2015.py
src/: glvideorender.cpp  glvideorender.h  glvideowidget.cpp  glvideowidget.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  playmanager.cpp  playmanager.h  utils.cpp  utils.h  videocapture.cpp  videocapture.h
vtcore/: CMakeLists.txt
vtcore/include/vtcore/io/: annotationfinder.h  otb.h  playmanager.h  videocapture.h
vtcore/include/vtcore/render/: coordinate.h  glvideorender.h  glvideowidget.h  marks.h  view.h
vtcore/include/vtcore/tracking/: bbox.h
vtcore/shaders/: cross.frag  indicator.vert  marks.vert  point.vert  rect.vert  renderRGB.frag  renderRGB.vert  renderYUV420P.frag  shaders.qrc
vtcore/src/io/: annotationfinder.cpp  otb.cpp  playmanager.cpp  videocapture.cpp
vtcore/src/render/: coordinate.cpp  glvideorender.cpp  glvideowidget.cpp  marks.cpp  view.cpp
